--- a/works.html
+++ b/works.html
@@ -64,14 +64,14 @@
             </div>
         </nav>
     </header>
-    <main>
+    <main class="container-xl">
 
 
         <h1 class="p-5 text-lg-start text-center">all projects</h2>
             <div>
 
                 <!-- photography section -->
-                <section class="container-xl border-top border-2">
+                <section class="border-top border-2">
                     <h2 class="p-5 pb-0 text-lg-start text-center">photography</h2>
                     <div class="row g-5 p-5">
 
@@ -114,7 +114,7 @@ images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
 
                 <!-- videography section-->
 
-                <section class="container-xl border-top border-2">
+                <section class="border-top border-2">
                     <h2 class="p-5 pb-0 text-lg-start text-center">videography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
@@ -154,7 +154,7 @@ images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
 
                 <!-- web dev and design section-->
 
-                <section class="container-xl border-top border-2">
+                <section class="border-top border-2">
                     <h2 class="p-5 pb-0 text-lg-start text-center">web development and design</h2>
                     <div class="row g-5 p-5 pb-0">
                         <div class="col-12 col-lg-6">
