--- a/index.html
+++ b/index.html
@@ -67,17 +67,21 @@
 
   <main>
     <!-- home section -->
-    <section class="banner p-5" id="divider">
-      <div class="p-5">
-        <div class="container-fluid p-5 bg-secondary bg-opacity-75 rounded-4">
-          <div class="p-5">
+    <section class="banner p-sm-5" id="divider">
+      <div class="p-sm-5">
+        <div class="p-sm-5 pink-pad bg-opacity-75 rounded-4 text-center text-lg-start">
+          <div class="p-sm-5">
+            <div class="pink-pad-1 p-sm-0 p-5">
             <h1>PATRICK MINH NGOC LE</h1>
             <p class="my-5 h3">designer | developer</p>
+          </div>
+            <div class="pink-pad-2">
             <p class="my-5 h5">Showcasing innovative design and development expertise, bridging digital branding with
               creativity in the
               modern era.</p>
-            <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/about.html" role="button">know
+            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="/about.html" role="button">know
               more</a>
+            </div>
           </div>
         </div>
       </div>
@@ -110,19 +114,21 @@
     </section>
     <!-- about section -->
     <section>
-      <h2 class="m-5">about me</h2>
-      <div class="about-me p-5">
-        <div class="p-5">
-          <div class="row p-5">
-            <div class="col-6"></div>
-            <div class="col-6 p-5 bg-secondary rounded-4">
-              <p class="h5">
+      <h2 class="p-5 pb-0 text-sm-start text-center">about me</h2>
+      <div class="about-me p-sm-5 py-5">
+        <div class="p-sm-5">
+          <div class="row p-sm-5">
+            <div class="col-md-6 order-2"></div>
+            <div class="col-12 col-md-6 p-sm-5 rounded-4 order-1 order-lg-2 text-center text-sm-start pink-pad">
+              <p class="h5 p-5 p-sm-0 pink-pad-1">
                 Passionate about leveraging technology to create impactful solutions, I bring creativity and expertise
                 to
                 every project.
               </p>
-              <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/contact.html" role="button">contact
+              <div class="pink-pad-2 p-sm-0 py-5">
+              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/contact.html" role="button">contact
                 me</a>
+              </div>
             </div>
           </div>
         </div>
