--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
   <!-- Icons CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
   <!-- Custom CSS -->
-  <link rel="stylesheet" href="/css/style.css">
-  <link rel="stylesheet" href="/css/main.css">
+  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 
 <body>
@@ -36,8 +36,8 @@
       <div class="container-fluid">
 
         <!-- logo -->
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-            itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+        <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+            itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
 
         <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav"
           aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -48,16 +48,16 @@
         <div class="collapse navbar-collapse" id="navbarNav">
           <ul class="navbar-nav ms-auto">
             <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-              <a class="nav-link active" aria-current="page" href="/index.html">HOME</a>
+              <a class="nav-link active" aria-current="page" href="./index.html">HOME</a>
             </li>
             <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-              <a class="nav-link" href="/works.html">WORKS</a>
+              <a class="nav-link" href="./works.html">WORKS</a>
             </li>
             <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-              <a class="nav-link" href="/about.html">ABOUT</a>
+              <a class="nav-link" href="./about.html">ABOUT</a>
             </li>
             <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
-              <a class="nav-link" href="/contact.html">CONTACT</a>
+              <a class="nav-link" href="./contact.html">CONTACT</a>
             </li>
           </ul>
         </div>
@@ -79,7 +79,7 @@
             <p class="my-5 h5" role="heading">Showcasing innovative design and development expertise, bridging digital branding with
               creativity in the
               modern era.</p>
-            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="/about.html" role="button" aria-label="go to about me page">know
+            <a class="btn btn-outline-primary rounded-5 border-3 my-2 py-1" href="./about.html" role="button" aria-label="go to about me page">know
               more</a>
             </div>
           </div>
@@ -108,7 +108,7 @@
             </div>
           </div>
         </div>
-        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="/works.html" role="button" aria-label="go to works page">know more</a>
+        <a class="btn btn-outline-primary rounded-5 border-3 my-5 py-1" href="./works.html" role="button" aria-label="go to works page">know more</a>
       </div>
 
     </section>
@@ -126,7 +126,7 @@
                 every project.
               </p>
               <div class="pink-pad-2 p-sm-0 py-5">
-              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="/contact.html" role="button" aria-label="go to contact page">contact
+              <a class="btn btn-outline-primary rounded-5 border-3 my-3 py-1" href="./contact.html" role="button" aria-label="go to contact page">contact
                 me</a>
               </div>
             </div>
@@ -143,8 +143,8 @@
         <p class="h4" role="heading">web designer & developer</p>
       </div>
       <div class="p-4">
-        <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-            itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+        <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+            itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
       </div>
     </div>
   </footer>
