--- a/about.html
+++ b/about.html
@@ -17,7 +17,7 @@
     <!-- Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -35,8 +35,8 @@
             <div class="container-fluid">
 
                 <!-- logo -->
-                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+                <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
 
                 <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -48,16 +48,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/index.html">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/works.html">WORKS</a>
+                            <a class="nav-link" href="./works.html">WORKS</a>
                         </li>
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link active" aria-current="page" href="/about.html">ABOUT</a>
+                            <a class="nav-link active" aria-current="page" href="./about.html">ABOUT</a>
                         </li>
                         <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/contact.html">CONTACT</a>
+                            <a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
 
                     </ul>
@@ -72,16 +72,16 @@
             <div class="row">
                 <div class="col-lg-6 col-12">
                     <picture>
-                        <source srcset="images/profile-pic/profile-pic-479p.png,
-                images/profile-pic/profile-pic-958p.png 2x,
-                images/profile-pic/profile-pic-1437p.png 3x" media="(min-width:992px)">
-                        <source srcset="images/profile-pic/profile-pic-360p.png,
-                images/profile-pic/profile-pic-720p.png 2x,
-                images/profile-pic/profile-pic-1080p.png 3x" media="(min-width:577px)">
-                        <source srcset="images/profile-pic/profile-pic-180p.png,
-                images/profile-pic/profile-pic-360p.png 2x,
-                images/profile-pic/profile-pic-540p.png 3x" media="(max-width:576px)">
-                        <img class="rounded-4" src="/images/profile-pic/profile-pic-360p.png" alt="profile">
+                        <source srcset="./images/profile-pic/profile-pic-479p.png,
+                ./images/profile-pic/profile-pic-958p.png 2x,
+                ./images/profile-pic/profile-pic-1437p.png 3x" media="(min-width:992px)">
+                        <source srcset="./images/profile-pic/profile-pic-360p.png,
+                ./images/profile-pic/profile-pic-720p.png 2x,
+                ./images/profile-pic/profile-pic-1080p.png 3x" media="(min-width:577px)">
+                        <source srcset="./images/profile-pic/profile-pic-180p.png,
+                ./images/profile-pic/profile-pic-360p.png 2x,
+                ./images/profile-pic/profile-pic-540p.png 3x" media="(max-width:576px)">
+                        <img class="rounded-4" src="./images/profile-pic/profile-pic-360p.png" alt="profile">
                     </picture>
                 </div>
                 <div class="col-lg-6 col-12">
@@ -108,8 +108,8 @@
                 <p class="h4" role="heading">web designer & developer</p>
             </div>
             <div class="p-4">
-                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+                <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
             </div>
         </div>
     </footer>
