--- a/works.html
+++ b/works.html
@@ -17,7 +17,7 @@
     <!-- Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
     <!-- Custom CSS -->
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
 
 <body>
@@ -34,8 +34,8 @@
             <div class="container-fluid">
 
                 <!-- logo -->
-                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+                <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
 
                 <button class="navbar-toggler border-0 bg-secondary p-3" type="button" data-bs-toggle="collapse"
                     data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false"
@@ -47,16 +47,16 @@
                 <div class="collapse navbar-collapse" id="navbarNav">
                     <ul class="navbar-nav ms-auto">
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/index.html">HOME</a>
+                            <a class="nav-link" href="./index.html">HOME</a>
                         </li>
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link active" aria-current="page" href="/works.html">WORKS</a>
+                            <a class="nav-link active" aria-current="page" href="./works.html">WORKS</a>
                         </li>
                         <li class="nav-item item-1 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/about.html">ABOUT</a>
+                            <a class="nav-link" href="./about.html">ABOUT</a>
                         </li>
                         <li class="nav-item item-2 mx-5 p-2 rounded-4 text-center">
-                            <a class="nav-link" href="/contact.html">CONTACT</a>
+                            <a class="nav-link" href="./contact.html">CONTACT</a>
                         </li>
 
                     </ul>
@@ -73,24 +73,24 @@
                     <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">photography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
-                            <source srcset="images/works-pic/photo-1-684p.png,
-images/works-pic/photo-1-1368p.png 2x,
-images/works-pic/photo-1-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="images/works-pic/photo-1-270p.png,
-images/works-pic/photo-1-540p.png 2x,
-images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="images/works-pic/photo-1-540p.png"
+                            <source srcset="./images/works-pic/photo-1-684p.png,
+./images/works-pic/photo-1-1368p.png 2x,
+./images/works-pic/photo-1-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="./images/works-pic/photo-1-270p.png,
+./images/works-pic/photo-1-540p.png 2x,
+./images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="./images/works-pic/photo-1-540p.png"
                                 alt="photorgraphy works">
                         </picture>
 
                         <picture class="col-12 col-lg-6 d-none d-lg-flex">
-                            <source srcset="images/works-pic/photo-2-684p.png,
-    images/works-pic/photo-2-1368p.png 2x,
-    images/works-pic/photo-2-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="images/works-pic/photo-2-270p.png,
-    images/works-pic/photo-2-540p.png 2x,
-    images/works-pic/photo-2-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="images/works-pic/photo-2-540p.png"
+                            <source srcset="./images/works-pic/photo-2-684p.png,
+    ./images/works-pic/photo-2-1368p.png 2x,
+    ./images/works-pic/photo-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="./images/works-pic/photo-2-270p.png,
+    ./images/works-pic/photo-2-540p.png 2x,
+    ./images/works-pic/photo-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="./images/works-pic/photo-2-540p.png"
                                 alt="photorgraphy works">
                         </picture>
 
@@ -115,24 +115,24 @@ images/works-pic/photo-1-810p.png 3x" media="(max-width:576px)">
                     <h2 class="p-5 pb-0 text-lg-start text-center" role="heading">videography</h2>
                     <div class="row g-5 p-5">
                         <picture class="col-12 col-lg-6">
-                            <source srcset="images/works-pic/video-1-684p.png,
-images/works-pic/video-1-1368p.png 2x,
-images/works-pic/video-1-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="images/works-pic/video-1-270p.png,
-images/works-pic/video-1-540p.png 2x,
-images/works-pic/video-1-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="images/works-pic/video-1-540p.png"
+                            <source srcset="./images/works-pic/video-1-684p.png,
+./images/works-pic/video-1-1368p.png 2x,
+./images/works-pic/video-1-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="./images/works-pic/video-1-270p.png,
+./images/works-pic/video-1-540p.png 2x,
+./images/works-pic/video-1-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="./images/works-pic/video-1-540p.png"
                                 alt="videography works">
                         </picture>
 
                         <picture class="col-12 col-lg-6 d-none d-lg-flex">
-                            <source srcset="images/works-pic/video-2-684p.png,
-images/works-pic/video-2-1368p.png 2x,
-images/works-pic/video-2-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="images/works-pic/video-2-270p.png,
-images/works-pic/video-2-540p.png 2x,
-images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="images/works-pic/video-2-540p.png"
+                            <source srcset="./images/works-pic/video-2-684p.png,
+./images/works-pic/video-2-1368p.png 2x,
+./images/works-pic/video-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="./images/works-pic/video-2-270p.png,
+./images/works-pic/video-2-540p.png 2x,
+./images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="./images/works-pic/video-2-540p.png"
                                 alt="videography works">
                         </picture>
 
@@ -157,13 +157,13 @@ images/works-pic/video-2-810p.png 3x" media="(max-width:576px)">
                         <div class="col-12 col-lg-6">
                             <!-- first web pic -->
                             <picture>
-                                <source srcset="images/works-pic/web-1-684p.png,
-images/works-pic/web-1-1368p.png 2x,
-images/works-pic/web-1-2052p.png 3x" media="(min-width:577px)">
-                                <source srcset="images/works-pic/web-1-270p.png,
-images/works-pic/web-1-540p.png 2x,
-images/works-pic/web-1-810p.png 3x" media="(max-width:576px)">
-                                <img class="rounded-4 w-100" src="images/works-pic/web-1-540p.png" alt="web example">
+                                <source srcset="./images/works-pic/web-1-684p.png,
+./images/works-pic/web-1-1368p.png 2x,
+./images/works-pic/web-1-2052p.png 3x" media="(min-width:577px)">
+                                <source srcset="./images/works-pic/web-1-270p.png,
+./images/works-pic/web-1-540p.png 2x,
+./images/works-pic/web-1-810p.png 3x" media="(max-width:576px)">
+                                <img class="rounded-4 w-100" src="./images/works-pic/web-1-540p.png" alt="web example">
                             </picture>
                             <div class="p-5 pb-0 text-center">
                                 <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
@@ -174,13 +174,13 @@ images/works-pic/web-1-810p.png 3x" media="(max-width:576px)">
                         <div class="col-12 col-lg-6">
                             <!-- second web pic -->
                         <picture>
-                            <source srcset="images/works-pic/web-2-684p.png,
-images/works-pic/web-2-1368p.png 2x,
-images/works-pic/web-2-2052p.png 3x" media="(min-width:577px)">
-                            <source srcset="images/works-pic/web-2-270p.png,
-images/works-pic/web-2-540p.png 2x,
-images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
-                            <img class="rounded-4 w-100" src="images/works-pic/web-2-540p.png" alt="web example">
+                            <source srcset="./images/works-pic/web-2-684p.png,
+./images/works-pic/web-2-1368p.png 2x,
+./images/works-pic/web-2-2052p.png 3x" media="(min-width:577px)">
+                            <source srcset="./images/works-pic/web-2-270p.png,
+./images/works-pic/web-2-540p.png 2x,
+./images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
+                            <img class="rounded-4 w-100" src="./images/works-pic/web-2-540p.png" alt="web example">
                         </picture>
                         <div class="p-5 pb-0 text-center">
                             <a class="btn btn-outline-primary rounded-5 border-3 py-1 d-inline-block"
@@ -204,8 +204,8 @@ images/works-pic/web-2-810p.png 3x" media="(max-width:576px)">
                 <p class="h4" role="heading">web designer & developer</p>
             </div>
             <div class="p-4">
-                <a class="navbar-brand" href="/index.html" itemscope itemtype="https://schema.org/Organization"><img
-                        itemprop="logo" src="/images/logo.png" alt="Patrick's logo" class="logo"></a>
+                <a class="navbar-brand" href="./index.html" itemscope itemtype="https://schema.org/Organization"><img
+                        itemprop="logo" src="./images/logo.png" alt="Patrick's logo" class="logo"></a>
             </div>
         </div>
     </footer>
